feat: update community endpoint
